--- a/style.css
+++ b/style.css
@@ -1,23 +1,13 @@
-:root {
-    --grid-cols: 1;
-    --grid-rows: 1;
-}
-
 .grid-container {
+    height: 990px;
+    width: 990px;
+    display: flex;
+    flex-wrap: wrap;
     border: 1px solid black;
-    height: 800px;
-    width: 800px;
-    padding: 5px;
-    align-self: center;
-    display: grid;
-    grid-gap: 1em;
-    grid-template-rows: repeat(var(--grid-rows), 1fr);
-    grid-template-columns: repeat(var(--grid-cols), 1fr);
 }
 
 .grid-item {
-    padding: 1em;
-    border: 1px solid #ddd;
-    text-align: center;
+    border: 1px solid black;
+    height: 10px;
+    width: 10px;
 }
-  
