--- a/style.css
+++ b/style.css
@@ -1,13 +1,19 @@
-.grid-container {
-    height: 990px;
-    width: 990px;
-    display: flex;
-    flex-wrap: wrap;
-    border: 1px solid black;
-}
-
-.grid-item {
-    border: 1px solid black;
-    height: 10px;
-    width: 10px;
-}
+:root {
+    --grid-cols: 1;
+    --grid-rows: 1;
+  }
+  
+  #container {
+    width: 900px;
+    height: 900px;
+    display: grid;
+    grid-template-rows: repeat(var(--grid-rows), 1fr);
+    grid-template-columns: repeat(var(--grid-cols), 1fr);
+  }
+  
+  .grid-item {
+    min-width: 0;
+    min-height: 0;  
+    border: 1px solid #ddd;
+    text-align: center;
+  }
