--- a/style.css
+++ b/style.css
@@ -3,17 +3,21 @@
     --grid-rows: 1;
   }
   
-  #container {
-    width: 900px;
+#container {
+     width: 900px;
     height: 900px;
     display: grid;
     grid-template-rows: repeat(var(--grid-rows), 1fr);
     grid-template-columns: repeat(var(--grid-cols), 1fr);
-  }
+}
   
-  .grid-item {
+.grid-item {
     min-width: 0;
     min-height: 0;  
-    border: 1px solid #ddd;
+    border: 1px solid rgb(0, 0, 0);
     text-align: center;
-  }
+}
+
+/*.grid-item:hover {
+    background-color: black;
+}*/
