--- a/style.css
+++ b/style.css
@@ -2,11 +2,19 @@
     --grid-cols: 1;
     --grid-rows: 1;
   }
+
+.flex {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
   
 #container {
      width: 900px;
     height: 900px;
     display: grid;
+    
     grid-template-rows: repeat(var(--grid-rows), 1fr);
     grid-template-columns: repeat(var(--grid-cols), 1fr);
 }
@@ -18,6 +26,3 @@
     text-align: center;
 }
 
-/*.grid-item:hover {
-    background-color: black;
-}*/
